# gvpn

./: Makefile.am  clean  commit  config.status  configure.ac  configure.ac.bak  foobar_client  foobar_server  gvpn-daemon_0.1-1.dsc  gvpn-daemon_0.1-1_i386.build  gvpn-daemon_0.1.dsc  gvpn-daemon_0.1_i386.build  gvpn-daemon_0.1_i386.changes  gvpn-daemon_0.1_i386.deb  gvpn_0.1.dsc  gvpn_0.1_i386.build  gvpn_0.1_i386.changes  gvpn_0.1_i386.deb  libtool
autom4te.cache/: output.0  output.1  requests  traces.1
backup/foobar-server/: .tm_project2.cache  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
backup/foobar-server/.anjuta/session/: anjuta.session  dock-layout.xml
backup/foobar-server/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
backup/foobar-server/po/: Makefile  Makefile.in
backup/foobar-server/src/: Makefile  Makefile.am  Makefile.in  comm.c~  foobar_server  main.c  main.c~
backup/foobar-server/src/.deps/: comm.Po  main.Po
backup/gtk-fobar/: Makefile.am  configure.ac
backup/gtk-fobar/autom4te.cache/: output.0  output.1  traces.0  traces.1
backup/gtk-fobar/fb/: Doxyfile  configure.in  fb.kdevelop
backup/gtk-fobar/hw/: AUTHORS  Doxyfile  configure.in  hw.kdevelop
backup/gtk-fobar/po/: Makefile  Makefile.in
backup/gtk-fobar/src/: Makefile  Makefile.am  Makefile.in  gtk_foobar  main.cc
backup/gtk-fobar/src/.deps/: main.Po
backup/gvpn/: .tm_project2.cache  Makefile
backup/gvpn-daemon/: Makefile  Makefile.am  config.status  configure  configure.ac
backup/gvpn-daemon/autom4te.cache/: output.0
backup/gvpn-daemon/src/: Makefile  Makefile.am  Makefile.am.bak  comm.h  common.h  daemon.c  daemon.c~  daemon.h  gvpn_daemon  main.c  main.c~  pptp.c  pptp.c~  pptp.h
backup/gvpn-daemon/src/.deps/: common.Po  daemon.Po  main.Po
backup/gvpn/autom4te.cache/: output.2  traces.2
backup/gvpn/src/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  callbacks.c~  comm.h  (+6 more)
foobar-client/: .tm_project2.cache
foobar-server/: .tm_project2.cache
gvpn/: .tm_project2.cache  ChangeLog  Makefile  Makefile.in  TODO.tasks  config.h~  config.status  config.status.lineno  configure  configure.ac.bak  configure.scan  libtool
gvpn-daemon/: .tm_project2.cache  Makefile  Makefile.in  TODO.tasks  config.h  config.status
gvpn-daemon/.anjuta/: default.profile
gvpn-daemon/autom4te.cache/: traces.0  traces.1
gvpn-daemon/debian/: changelog  control  files  gvpn-daemon.postinst.debhelper  gvpn-daemon.postrm.debhelper  gvpn-daemon.prerm.debhelper  gvpn-default  rules
gvpn-daemon/src/: Makefile  Makefile.am  Makefile.in  comm.c  comm.c~  comm.h  comm.h~  common.c  common.c~  common.h  common.h~  daemon.c  daemon.c~  daemon.h~  gvpn_daemon  main.c  main.c~  pptp.c  pptp.c~  pptp.h  pptp.h~
gvpn-daemon/src/.deps/: common.Po  daemon.Po  main.Po  pptp.Po
gvpn-gtk/: .tm_project2.cache  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac
gvpn-gtk/.anjuta/session/: anjuta.session  dock-layout.xml
gvpn-gtk/autom4te.cache/: output.0  requests  traces.0  traces.1
gvpn-gtk/po/: Makefile  Makefile.in
gvpn-gtk/src/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  cfg.c  comm-client.cpp  comm-client.hpp  comm.h  gvpn-config.cpp  gvpn-config.hpp  gvpn-core.cpp  gvpn-core.hpp  gvpn-ui.cpp  gvpn-ui.hpp  gvpn.glade  gvpn_gtk  handlers.c  main.cc
gvpn-gtk/src/.deps/: comm-client.Po  core.Po  gvpn-config.Po  gvpn-core.Po  gvpn-ui.Po  handlers.Tpo  main.Po
gvpn/.anjuta/: default.profile
gvpn/autom4te.cache/: requests  traces.0  traces.1
gvpn/debian/: changelog  control  copyright  files  gvpn.menu  gvpn.substvars  rules
gvpn/po/: Makefile  Makefile.in  POTFILES  POTFILES.in  en.gmo  en.po  gvpn.po  gvpn.pot  messages.mo  missing  ru.po
gvpn/src/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  callbacks.c~  callbacks.h  callbacks.h~  cfg.c  cfg.c~  comm.c  comm.c~  config.c~  gvpn  gvpn.glade  handlers.c  handlers.c~  main.c  main.c~  notify.c  notify.c~  ui.c
po/: Makefile
release.0.1/: gvpn-daemon_0.1_i386.deb  gvpn_0.1_i386.deb
src/: Makefile.am  Makefile.in  cfg.c  cfg.h  cfg.h~  gvpn.glade  handlers.c  log  log~  notify.c~  ui.c  ui.c~
(+36 files in other folders)
