## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = gvpn_daemon

gvpn_daemon_SOURCES = \
	comm.c       \
	comm.h       \
	common.c       \
	common.h       \
	daemon.c       \
	daemon.h       \
	main.c       \
	pptp.c       \
	pptp.h

gvpn_daemon_LDFLAGS = 

gvpn_daemon_LDADD = 

